k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cadence
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: cadence.lan
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cadence
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cadence-client
                port:
                  number: 80
